--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,29 @@
   object-position: center center;
 }
 
+.link {
+  position: relative;
+}
+
+.link::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 2px;
+  background: white;
+  transition: width 1s ease-in-out;
+}
+
+.link.active::before,
+.link.hover::before {
+  width: 100%;
+}
+
+.link::before {
+  width: 0;
+}
+
 .bg-gradient-45 {
   /* background-image: linear-gradient(45deg, #d2001a, #7462ff, #f48e21, #23d5ab); */
   /* background-image: linear-gradient(45deg, #6b21a8, #064e3b, #155e75, #9f1239); */
